scrollbar bug fixed

--- a/css/Notifications.css
+++ b/css/Notifications.css
@@ -27,9 +27,8 @@
     height: 3px;
 }
 .notifications::-webkit-scrollbar-track {
-    background: transparent;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 3px;
+    margin-bottom: 3px;
 }
 .notifications::-webkit-scrollbar-thumb {
     background: #1A5E63; 
